--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -95,18 +95,19 @@
 		<p>No Questionário Avaliativo, utilizamos critérios de avaliação que abrangem aspectos como usabilidade, funcionalidade e impacto na jogabilidade. Abaixo, explicamos detalhadamente 
 			os critérios utilizados nesta avaliação:</p>
 
-		<p>1. Objetivo Principal: Avalia se você entende claramente qual é o objetivo fundamental do programa de reconhecimento de cartas no contexto do jogo Magic: The Gathering. Isso 
+		<p>1. Objetivo Principal: Avalia se o usuário entende claramente qual é o objetivo fundamental do programa de reconhecimento de cartas no contexto do jogo Magic: The Gathering. Isso 
 			abrange sua compreensão sobre como o programa melhora a jogabilidade e a interação entre os jogadores.</p>
-		<p>2. Benefícios do Reconhecimento Automático: Verifica se você compreende os benefícios práticos de usar o programa para identificar automaticamente as cartas no tabuleiro, em 
+		<p>2. Benefícios do Reconhecimento Automático: Verifica se o usuário compreende os benefícios práticos de usar o programa para identificar automaticamente as cartas no tabuleiro, em 
 			comparação com a identificação manual. Isso envolve sua percepção sobre como o programa pode agilizar e enriquecer sua experiência de jogo.</p>
-		<p>3. Contribuição para a Imersão: Avalia se você entende como o programa de reconhecimento de cartas contribui para uma experiência mais imersiva, semelhante à versão física do 
+		<p>3. Contribuição para a Imersão: Avalia se o usuário entende como o programa de reconhecimento de cartas contribui para uma experiência mais imersiva, semelhante à versão física do 
 			jogo. Isso inclui sua compreensão sobre como o programa simula a disposição das cartas e ações durante a partida.</p>
-		<p>4. Evitando Trapaças e Erros: Verifica se você reconhece a importância do programa na garantia da integridade do jogo e na prevenção de trapaças. Isso abrange sua percepção sobre 
+		<p>4. Evitando Trapaças e Erros: Verifica se o usuário reconhece a importância do programa na garantia da integridade do jogo e na prevenção de trapaças. Isso abrange sua percepção sobre 
 			como o programa cria uma representação visual confiável das ações dos jogadores.</p>
-		<p>5. Simplicidade de Uso: Avalia se você entende a facilidade de uso do programa e como ele simplifica o processo de identificação de cartas, eliminando a necessidade de comunicação 
+		<p>5. Simplicidade de Uso: Avalia se o usuário entende a facilidade de uso do programa e como ele simplifica o processo de identificação de cartas, eliminando a necessidade de comunicação 
 			verbal detalhada entre os jogadores.</p>
-		<p>6. Compatibilidade com a Experiência Física: Verifica se você compreende como o programa busca replicar a experiência física do jogo, permitindo que você utilize seu baralho real 
+		<p>6. Compatibilidade com a Experiência Física: Verifica se o usuário compreende como o programa busca replicar a experiência física do jogo, permitindo que você utilize seu baralho real 
 			durante as partidas online.</p>
+		<p>7. Conhecimento técnico de Processamento de Vídeo: Avalia se o usuário entende a parte téorica por trás do funcionamento do programa;</p>
 
 		<a href="https://crakehallboars.github.io/project/parte4/SPV_application_quiz.html"> Instruções e Questionários</a> <br>
 
