--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -109,7 +109,10 @@
 			verbal detalhada entre os jogadores.</p>
 		<p>6. Compatibilidade com a Experiência Física: Verifica se o usuário compreende como o programa busca replicar a experiência física do jogo, permitindo que você utilize seu baralho real 
 			durante as partidas online.</p>
-		<p>7. Conhecimento técnico de Processamento de Vídeo: Avalia se o usuário entende a parte téorica por trás do funcionamento do programa;</p>
+		<p>7. Conhecimento técnico de Processamento de Vídeo: Avalia se o usuário entende a parte téorica por trás do funcionamento do programa.</p>
+
+		<p>Ao avaliar cada um desses critérios, pretendemos entender o quão bem o usuário captou a proposta e os benefícios do programa de reconhecimento de cartas em Magic: The Gathering. 
+			A sua visão é fundamental para o aprimoramento contínuo do programa e sua contribuição é altamente valorizada.</p>
 
 		<h2>3. Conclusão</h2>
 
