--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -114,6 +114,9 @@
 		<p>Ao avaliar cada um desses critérios, pretendemos entender o quão bem o usuário captou a proposta e os benefícios do programa de reconhecimento de cartas em Magic: The Gathering. 
 			A sua visão é fundamental para o aprimoramento contínuo do programa e sua contribuição é altamente valorizada.</p>
 
+		<p>Resultados do AQA:</p>
+		
+
 		<h2>3. Conclusão</h2>
 
 		<h2>4. Referências Bibliográficas</h2>
