--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -115,6 +115,8 @@
 			A sua visão é fundamental para o aprimoramento contínuo do programa e sua contribuição é altamente valorizada.</p>
 
 		<p>Resultados do AQA:</p>
+
+		<img src="" height="480">
 		
 
 		<h2>3. Conclusão</h2>
