--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -116,8 +116,7 @@
 
 		<p>Resultados do AQA:</p>
 
-		<img src="" height="480">
-		
+    		<img src='2.7/AQA/info.png'/>		
 
 		<h2>3. Conclusão</h2>
 
