--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -116,7 +116,17 @@
 
 		<p>Resultados do AQA:</p>
 
-    		<img src='2.7/AQA/info.png'/>		
+    		<img src='2.7/AQA/info.png'/>
+		<img src='2.7/AQA/perguntas_erradas_freq.png'/>
+		<img src='2.7/AQA/1.png'/>
+		<img src='2.7/AQA/2.png'/>
+		<img src='2.7/AQA/3.png'/>
+		<img src='2.7/AQA/4.png'/>
+		<img src='2.7/AQA/5.png'/>
+		<img src='2.7/AQA/6.png'/>
+		<img src='2.7/AQA/7.png'/>
+		<img src='2.7/AQA/8.png'/>
+		<img src='2.7/AQA/9.png'/>
 
 		<h2>3. Conclusão</h2>
 
