--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -74,6 +74,57 @@
 			<a href=project/plan/plan.html>MFS</a> <br>
 
 		<h3>2.3. Cronograma efetivo do desenvolvimento do SPV</h3>
+			 <table>
+				  <tr>
+				    <th>Data</th>
+				    <th>Funcionalidade</th>
+				    <th></th>
+				  </tr>
+				  <tr>
+				    <td>14/07</td>
+				    <td>Inicio do Desenvolvimento</td>
+				  </tr>
+				  <tr>
+				    <td>15/07</td>
+				    <td>Primeira versão da Interface Gráfica</td>
+				  </tr>
+				  <tr>
+				    <td>21/07</td>
+				    <td>Detecção de Cliques e criação do Algoritimo de Separação de Cartas</td>
+				  </tr>
+				  <tr>
+				    <td>23/07</td>
+				    <td>Integração do Algoritimo de Separação de Cartas</td>
+				  </tr>
+				  <tr>
+				    <td>24/07</td>
+				    <td>Integração do Algoritimo de Identificação de cartas</td>
+				  </tr>
+				  <tr>
+				    <td>09/08</td>
+				    <td>Criação dos testes automatizados</td>
+				  </tr>
+				  <tr>
+				    <td>11/08</td>
+				    <td>Correção de erros no redimensionamento das imagens</td>
+				  </tr>
+				  <tr>
+				    <td>16/08</td>
+				    <td>Coleta de imagens para segunda bateria de testes automatizados</td>
+				  </tr>
+				  <tr>
+				    <td>17/08</td>
+				    <td>Comparação de Métodos de identificação de cartas</td>
+				  </tr>
+				  <tr>
+				    <td>17/08</td>
+				    <td>Identificação de cartas por meio de SIFT</td>
+				  </tr>
+				  <tr>
+				    <td>18/08</td>
+				    <td>Teste de Campo</td>
+				  </tr>
+			<table></table>
 
 		<h3>2.4. Aplicação do SPV</h3>
 
