--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -68,10 +68,10 @@
 		<h2>2. Materiais e Métodos</h2>
 
 		<h3>2.1. Cenário de Aplicação (CA)</h3>
-			<a href=project/context/application_context.html>CA</a> <br>
+			<a href=../context/application_context.html>CA</a> <br>
 			
 		<h3>2.2. Modelagem Funcional do Sistema de Processamento Visual (MFS)</h3>
-			<a href=project/plan/plan.html>MFS</a> <br>
+			<a href=../plan/plan.html>MFS</a> <br>
 
 		<h3>2.3. Cronograma efetivo do desenvolvimento do SPV</h3>
 			 <table>
