--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -381,6 +381,21 @@
 		<img src='2.7/AQA/8.png'/>
 		<img src='2.7/AQA/9.png'/>
 
+		<p>Já no Questionário de Feedback, buscamos entender como foi a experiência do usuário utilizando nosso
+		programa e quais melhorias poderiam ser implementadas.</p>
+
+		<p>Resultados do Questionário de Feedback:</p>
+
+		<img src='2.7/QFeedback/1.png'/>
+		<img src='2.7/QFeedback/2.png'/>
+		<img src='2.7/QFeedback/3.png'/>
+		<img src='2.7/QFeedback/4.png'/>
+		<img src='2.7/QFeedback/5.png'/>
+		<img src='2.7/QFeedback/6.png'/>
+		<img src='2.7/QFeedback/7.png'/>
+		<img src='2.7/QFeedback/8.png'/>
+		<img src='2.7/QFeedback/9.png'/>
+				 
 		<h2>3. Conclusão</h2>
 
 		<h2>4. Referências Bibliográficas</h2>
