--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -398,6 +398,29 @@
 				 
 		<h2>3. Conclusão</h2>
 
+		<p>Em conclusão, o sistema de reconhecimento de cartas para o jogo Magic: The Gathering é uma ferramenta útil e 
+			eficaz para melhorar a jogabilidade e a interação entre os jogadores. Os resultados dos questionários 
+			mostraram que os usuários entenderam claramente o objetivo do programa e tiveram uma experiência 
+			positiva com o uso do mesmo. Algumas melhorias sugeridas pelos usuários poderiam ser implementadas para 
+			tornar o programa ainda mais eficiente e fácil de usar.</p>
+
+		<p>Com base nos resultados obtidos, podemos afirmar que os objetivos propostos na introdução foram atingidos. 
+			O programa de reconhecimento de cartas para o jogo Magic: The Gathering foi desenvolvido com o objetivo 
+			de melhorar a jogabilidade e a interação entre os jogadores, e os resultados dos questionários mostraram 
+			que a maioria dos usuários teve uma experiência positiva com o uso do programa.</p>
+
+		<p>No entanto, é importante destacar que alguns pontos negativos foram identificados durante a implementação do 
+			programa. Por exemplo, alguns usuários relataram dificuldades em utilizar o programa em ambientes com 
+			pouca iluminação ou com reflexos na mesa de jogo. Além disso, alguns usuários sugeriram melhorias na 
+			questão da rotação da carta, ou seja, fazer com que o programa rotacione a carta para a orientação 
+			"correta", independente de como a carta estiver.</p>
+
+		<p>Por outro lado, os pontos positivos da implementação do programa também devem ser destacados. O programa foi 
+			capaz de reconhecer com as cartas utilizadas pelos usuários durante os testes de campo, o que 
+			pode melhorar a jogabilidade e a interação entre os jogadores. Além disso, o programa tem o potencial de
+			permitir que os jogadores utilizem seus baralhos físicos durante as partidas online, replicando a 
+			experiência física do jogo.</p>
+
 		<h2>4. Referências Bibliográficas</h2>
 
 		<h2>5. Anexo</h2>
