--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -416,7 +416,7 @@
 			"correta", independente de como a carta estiver.</p>
 
 		<p>Por outro lado, os pontos positivos da implementação do programa também devem ser destacados. O programa foi 
-			capaz de reconhecer com as cartas utilizadas pelos usuários durante os testes de campo, o que 
+			capaz de reconhecer parte das cartas utilizadas pelos usuários durante os testes de campo, o que 
 			pode melhorar a jogabilidade e a interação entre os jogadores. Além disso, o programa tem o potencial de
 			permitir que os jogadores utilizem seus baralhos físicos durante as partidas online, replicando a 
 			experiência física do jogo.</p>
