--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -423,6 +423,10 @@
 
 		<h2>4. Referências Bibliográficas</h2>
 
+		<a href="https://nessy.info/post/2018-01-12-magic-the-gathering-card-recognition/"> https://nessy.info/post/2018-01-12-magic-the-gathering-card-recognition/</a> <br>
+
+		<a href="https://github.com/dilanHewawitharana/Document-Scanner-using-OpenCV"> https://github.com/dilanHewawitharana/Document-Scanner-using-OpenCV</a> <br>
+
 		<h2>5. Anexo</h2>
 		
 	</body>
