--- a/project/SPV/SPV.html
+++ b/project/SPV/SPV.html
@@ -17,9 +17,26 @@
         p {
             margin: 10px 0 60px 0;  
         }
+        h1, h2 {
+            margin: 10px 0;  /* Margem reduzida para h1 e h2 */
+        }
+        .no-margin {
+            margin: 10px 0;  /* Removendo a margem extra dos parágrafos específicos */
+        }
     </style>
 </head>
 <body>
+    <h1>Trabalho de Vídeo T1 - Modelagem Funcional</h1>
+
+    <h2>Grupo</h2>
+
+    <p class="no-margin">Leonardo Di Credico</p>
+    <p class="no-margin">Anthony Hlebania</p>
+    <p class="no-margin">Fernando Hiroaki Suzuki</p>
+    <p class="no-margin">Fernando Astolfo Dos Santos</p>
+
+    <p></p>
+
     <h1>SPV</h1>
 
     <img src="1.jpg" alt="Imagem 1">
