--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -303,6 +303,11 @@
 					<td>Instalação de dependências do programa</td>
 				  </tr>
 				  <tr>
+				    <td>.</td>
+				    <td>test.sh</td>
+					<td>Execução dos testes automatizados</td>
+				  </tr>
+				  <tr>
 				  </tr>
 				  <tr>
 				    <td>tests</td>
