--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<a href=project/plan/plan.html> Modelagem Funcional</a> <br>
 			<a href=project/parte4/SPV_application_quiz.html> Aplicação do SPV e Questionário Avaliativo</a> <br>
 			<a href=project/relatorio/relatorio.html> Relatório</a> <br>
+			<a href=project/SPV/SPV.html> Instruções</a> <br>
 			
 
 			<br>
